--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title></title>
 	<meta content="" name="description">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="./css/normalize.css">
 	<link charset="utf-8" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" media=
 	"screen" rel="stylesheet" title="no title">
 	<link href="css/main.css" rel="stylesheet">
